<resources>
    <string name="app_name">疾客</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hint_website">Input website</string>

    <string name="menu_keep">收藏网址</string>
    <string name="menu_bookmark">书签</string>
    <string name="menu_download">下载</string>
    <string name="menu_renovate">刷新</string>
    <string name="menu_share">分享</string>
    <string name="menu_about">关于</string>
    <string name="menu_setting">设置</string>
    <string name="menu_exit">退出</string>

    <string name="hint_for_exit">你确定要退出吗？</string>
    <string name="text_cancel">取消</string>
    <string name="text_exit">退出</string>

    <string name="page_menu_select">选择文字</string>
    <string name="page_menu_bookmark">添加书签</string>
    <string name="page_menu_index">添加到主页</string>
    <string name="page_menu_tools">工具箱</string>
</resources>
