<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/index_menu_outside"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="1"
        android:background="#00000000"
        android:contentDescription="outside" />

    <LinearLayout
        android:id="@+id/index_menu_inside"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical">

        <LinearLayout
            android:background="@drawable/shape_menu_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.jxnu.cure.geekbrowser.AdjustDrawButton
                android:id="@+id/button_menu_keep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_keep"
                android:paddingBottom="@dimen/small_dimen"
                android:paddingTop="@dimen/small_dimen"
                android:text="@string/menu_keep" />

            <com.jxnu.cure.geekbrowser.AdjustDrawButton
                android:id="@+id/button_menu_bookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_bookmark"
                android:paddingBottom="@dimen/small_dimen"
                android:paddingTop="@dimen/small_dimen"
                android:text="@string/menu_bookmark" />

            <com.jxnu.cure.geekbrowser.AdjustDrawButton
                android:id="@+id/button_menu_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_download"
                android:paddingBottom="@dimen/small_dimen"
                android:paddingTop="@dimen/small_dimen"
                android:text="@string/menu_download" />

            <com.jxnu.cure.geekbrowser.AdjustDrawButton
                android:id="@+id/button_menu_renovate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_renovate"
                android:paddingBottom="@dimen/small_dimen"
                android:paddingTop="@dimen/small_dimen"
                android:text="@string/menu_renovate" />
        </LinearLayout>

        <View
            android:layout_marginLeft="@dimen/small_plus_dimen"
            android:layout_marginRight="@dimen/small_plus_dimen"
            android:background="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="2dp"/>

        <LinearLayout
            android:background="@drawable/shape_menu_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.jxnu.cure.geekbrowser.AdjustDrawButton
                android:id="@+id/button_menu_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_share"
                android:paddingBottom="@dimen/small_dimen"
                android:paddingTop="@dimen/small_dimen"
                android:text="@string/menu_share" />

            <com.jxnu.cure.geekbrowser.AdjustDrawButton
                android:id="@+id/button_menu_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_about"
                android:paddingBottom="@dimen/small_dimen"
                android:paddingTop="@dimen/small_dimen"
                android:text="@string/menu_about" />

            <com.jxnu.cure.geekbrowser.AdjustDrawButton
                android:id="@+id/button_menu_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_setting"
                android:paddingBottom="@dimen/small_dimen"
                android:paddingTop="@dimen/small_dimen"
                android:text="@string/menu_setting" />

            <com.jxnu.cure.geekbrowser.AdjustDrawButton
                android:id="@+id/button_menu_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_exit"
                android:paddingBottom="@dimen/small_dimen"
                android:paddingTop="@dimen/small_dimen"
                android:text="@string/menu_exit" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_index_menu_drop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_menu_bar"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center">

            <ImageButton
                android:id="@+id/index_menu_drop"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/small_dimen"
                android:layout_marginTop="@dimen/small_dimen"
                android:background="@drawable/ic_drop"
                android:backgroundTint="#d0ffffff"
                android:clickable="false"
                android:contentDescription="返回"
                android:focusable="false" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>